--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "date-util": "^1.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.11",
@@ -16,7 +17,7 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
-   "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
